<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:padding="@dimen/main_layout_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/main_menu_text"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textColor="@color/white"
        android:layout_marginTop="-2dp"/>

    <Button
        style="@style/main_activity_button"
        android:id="@+id/search_btn"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:icon="@drawable/search_icon"/>
    <Button
        android:id="@+id/mediatheka_btn"
        android:text="@string/mediatheka"
        app:icon="@drawable/mediatheka_icon"
        style="@style/main_activity_button"/>
    <Button
        android:id="@+id/settings_btn"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
        style="@style/main_activity_button"/>




</LinearLayout>