<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_title_bar">
        <ImageButton
            android:id="@+id/settings_back_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/menu_title_bar"
            android:layout_height="@dimen/menu_title_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_icon" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/main_menu_text"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_title_text_padding"/>
    </FrameLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame"
        android:layout_marginHorizontal="@dimen/main_layout_padding"
        android:text="@string/dark_theme"
        style="@style/settings_items_text"/>

    <FrameLayout
        android:id="@+id/settings_share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame"
        android:paddingHorizontal="@dimen/main_layout_padding">
        <TextView
            android:text="@string/share_app"
            style="@style/settings_items_text"/>
        <ImageView
            style="@style/settings_items_pics"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame"
        android:paddingHorizontal="@dimen/main_layout_padding">
        <TextView
            android:text="@string/write_to_support"
            style="@style/settings_items_text"/>
        <ImageView
            style="@style/settings_items_pics"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="wrap_content"
            android:src="@drawable/support_icon"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings_terms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame"
        android:paddingHorizontal="@dimen/main_layout_padding">
        <TextView
            android:text="@string/terms_of_use"
            style="@style/settings_items_text"/>
        <ImageView
            style="@style/settings_items_pics"
            android:layout_width="@dimen/menu_icon_width"
            android:layout_height="wrap_content"
            android:src="@drawable/terms_icon"
            android:layout_gravity="center_vertical|end"/>
    </FrameLayout>


    
</LinearLayout>