<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_title_bar">
        <ImageView
            android:id="@+id/search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:layout_gravity="center_vertical"
            android:scaleType="center"
            android:layout_marginLeft="@dimen/menu_title_icon_padding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/main_menu_text"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/menu_title_text_padding"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:src="@drawable/search_background"/>

        <ImageView
            style="@style/search_bar_text_color"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:src="@drawable/search_icon" />

        <EditText
            style="@style/search_bar_text_color"
            android:id="@+id/query_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="36dp"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_regular"
            android:background="@null"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />
        <ImageView
            style="@style/search_bar_text_color"
            android:id="@+id/search_clear_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center|end"
            android:layout_marginRight="10dp"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/main_menu_padding"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <LinearLayout
            android:id="@+id/search_placeholder_nothing_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/search_placeholder_layout"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_nothing_found_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_found"
                style="@style/search_placeholder_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_placeholder_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/search_placeholder_layout"
            android:visibility="gone">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                style="@style/search_error_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_error"
                style="@style/search_placeholder_text"/>
            <Button
                android:id="@+id/search_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                style="@style/search_error_button"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_searched"
                android:layout_marginTop="40dp"
                style="@style/search_placeholder_text"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/clear_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_history"
                style="@style/search_error_button"/>
        </LinearLayout>
    </FrameLayout>





</LinearLayout>